--- a/package.json
+++ b/package.json
@@ -24,7 +24,12 @@
   "homepage": "https://github.com/Ziah-M/mern-boilerplate#readme",
   "dependencies": {
     "@hot-loader/react-dom": "^17.0.0-rc.2",
+    "body-parser": "^1.19.0",
+    "compression": "^1.7.4",
+    "cookie-parser": "^1.4.5",
+    "cors": "^2.8.5",
     "express": "^4.17.1",
+    "helmet": "^4.1.1",
     "mongodb": "^3.6.2",
     "react": "^16.14.0",
     "react-dom": "^16.14.0",
